--- a/settings.json
+++ b/settings.json
@@ -1,18 +1,24 @@
 { 
+	"LOGIN":"LOGIN",
 	"username":"john@example.com", 
 	"password":"password",
-	"ticketprourl":"https://ticketpro.janove.io/#/",
-	"ticketfileurl":"https://ticketfiles.janove.io/#/",
+	"PARAMETERS":"PARAMETERS",
+	"debug":"true",
 	"ExpirationInDays":"7",
 	"expirationActionThreshold":"8",
-	"reportfilename":"report.xlsx",
-	"changelogfilename":"changelog.xlsx",
-	"path":"./data/",
-	"body":"Please see attached file",
+	"URLS":"URLS",
+	"ticketprourl":"https://ticketpro.janove.io/#/",
+	"ticketfileurl":"https://ticketfiles.janove.io/#/",
+	"FILEPATHS":"FILEPATHS",
+	"usersFileName":"Temp\\users.xlsx",
+	"changelogTemplate":"Template\\changelog.xlsx",
+	"reportFileName":"Reports\\report.xlsx",
+	"changelogFileName":"Reports\\changelog.xlsx",
+	"EMAIL":"EMAIL",
+	"body":"Please see the attached files",
 	"subject":"Ticketpro status",
 	"receiver":"qakker@gmail.com",
 	"port":"465",
 	"server":"smtp.gmail.com",
 	"sender":"trygvesbil@gmail.com",
-	"regex":"[a*-z]+(@)+[a*-z]+"
 }
