solved, but might still need some tweaking

--- a/settings.json
+++ b/settings.json
@@ -5,13 +5,13 @@
 	"PARAMETERS":"PARAMETERS",
 	"debug":"true",
 	"ExpirationInDays":"7",
-	"expirationActionThreshold":"8",
+	"expirationActionThreshold":"14",
 	"URLS":"URLS",
 	"ticketprourl":"https://ticketpro.janove.io/#/",
 	"ticketfileurl":"https://ticketfiles.janove.io/#/",
 	"FILEPATHS":"FILEPATHS",
 	"usersFileName":"Temp\\users.xlsx",
-	"changelogTemplate":"Template\\changelog.xlsx",
+	"changelogTemplate":"Templates\\changelog.xlsx",
 	"reportFileName":"Reports\\report.xlsx",
 	"changelogFileName":"Reports\\changelog.xlsx",
 	"EMAIL":"EMAIL",
